[metadata]
name = servo
summary = servo - TODO.
description-file =
    README.md
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/retr0h/servo
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    servo = servo.shell:main

[files]
packages =
    servo

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
